--- a/index.html
+++ b/index.html
@@ -288,6 +288,12 @@
             opacity: 0;
             transition: opacity 0.5s;
         }
+        @media screen and (max-width: 768px) {
+            #book {
+                max-width: 90%;
+                aspect-ratio: 0.8;
+            }
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Nanum+Myeongjo:wght@700&family=Nanum+Gothic:wght@700&display=swap" rel="stylesheet">
 </head>
