--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         알게된지 10년, 여자친구로 지낸지 1년이네. 1주년 축하해
                         
                         사랑표현 많이 못해줘서 미안해. 
-                        사랑하는건 그대론데 아니 같이 보내는 시간이 길어질수록 더 소중해지는데
+                        사랑하는건 그대론데 보고있으면 귀여워서 삼켜버리고싶은데
                         오히려 너가 불안해하고 계속 사랑을 확인하게 만들어서 미안해. 
                         당시에 여러 잡생각 들면서 혼자 스트레스 받고 예민해지고 그러면서 마음에 여유가 좀 없었나봐.
                         그래서 말에 영혼도 없는거같고 진심도 안느껴지고 그냥 말하는데도 너가 듣기엔 킹받는 투였던것 같아
@@ -346,7 +346,7 @@
                         반 장난이고 지금도 많이 의지하고 있어. 
                         지금으로도 충분해. 날 좋다고 해주는 너가 늘 고마워
 
-                        좋은날에 우울한 얘기해서 미안. 곧 학기도 끝나고 방학인데 대차게 놀자. 
+                        좋은날에 꿀꿀한 얘기해서 미안. 곧 학기가 끝나고 방학인데
                         선물도 사주고 싶고, 여행도 가고 싶고, 맛있는것도 많이 먹고 싶어.
                         갖고싶은거 생각해놔 크리스마스때처럼 사줄게
 
@@ -356,8 +356,9 @@
                         앞으로도 함께 많은 추억 만들자.
 
                         많이 사랑해.
+                        2025년 5월 9일
                     </div>
-                    <div class="signature">너의 남자친구가</div>
+                    <div class="signature">남자친구가</div>
                 </div>
             </div>
             <div class="page-turn-effect" id="page-turn-effect"></div>
