--- a/index.html
+++ b/index.html
@@ -435,21 +435,19 @@
                     사랑표현 많이 못해줘서 미안해.
                     사랑하는건 그대론데 보고있으면 귀여워서 삼켜버리고싶은데
                     오히려 너가 불안해하고 계속 사랑을 확인하게 만들어서 미안해.
-                    당시에 여러 잡생각 들면서 혼자 스트레스 받고 예민해지고 그러면서 마음에 여유가 좀 없었나봐.
-                    그래서 말에 영혼도 없는거같고 진심도 안느껴지고 그냥 말하는데도 너가 듣기엔 킹받는 투였던것 같아
+                    당시 혼자 스트레스 받고 예민해지고 그러면서 마음에 여유가 좀 없었나봐.
                     항상 말하고 나서야 '아 이게 아닌데..' 그러려던게 아닌데 잘 안되니까 짜증만 나더라
                     이 시기만 지나면 괜찮아지겠지 하고 생각하면서 보냈어.
 
                     넌 의지해도 된다고 하는데 내눈엔 너가 너무 애기라 의지하고 그러기가 좀 그래
                     유치원생한테 의지하고싶은 늙은이가 어딨나
                     반 장난이고 지금도 많이 의지하고 있어.
-                    지금으로도 충분해. 날 좋다고 해주는 너가 늘 고마워
+                    지금으로도 충분해 내가 좋다고 해주는 너한테 고마워
 
-                    좋은날에 꿀꿀한 얘기해서 미안. 곧 학기가 끝나고 방학인데
+                    벌써 학기 절반이 지났고 곧 방학인데
                     선물도 사주고 싶고, 여행도 가고 싶고, 맛있는것도 많이 먹고 싶어.
-                    갖고싶은거 생각해놔 크리스마스때처럼 사줄게
 
-                    이걸로 떼울게 아니라 손편지도 줄거야 걱정마 ㅋㅋ
+                    편지는 이걸로 떼울거 아니고 손편지도 줄거니 걱정 ㄴㄴ
 
                     항상 서투르고 답답한 나랑 사겨줘서 고맙다
                     앞으로도 함께 많은 추억 만들자.
