--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                     answer2: "A"
                 },
                 {
-                    question3: "다음 중 반가운 상황은?",
+                    question3: "다음 중 박정은에게 반가운 것은?",
                     options3: ["머리에 뭐 있다면서 은근슬쩍 머리 쓰다듬는 차은우", 
                     "운동하고 왔다고 옷벗으며 복근 한번 만져보라는 송강", 
                     "'남유찬'", 
